--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "procurobanda",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.12.1",
-    "graphql": "^16.8.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.6.3"
   },
   "devDependencies": {
-    "@types/node": "^20.8.7",
-    "typescript": "^5.2.2"
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1"
   }
 }
